--- a/app_ss.plist
+++ b/app_ss.plist
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://10.188.128.140:8081/icons/big.png</string>
+					<string>https://raw.githubusercontent.com/vergAvesta/TESAPP/main/icon-512.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
