--- a/app_ss.plist
+++ b/app_ss.plist
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://10.188.128.140:8081/icons/small.png</string>
+					<string>https://raw.githubusercontent.com/vergAvesta/TESAPP/main/icon-57.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
