--- a/app_ss.plist
+++ b/app_ss.plist
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>TesPortal</string>
+				<string>TesPortalUAT</string>
 			</dict>
 		</dict>
 	</array>
