--- a/app_ss.plist
+++ b/app_ss.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/vergAvesta/TESAPP/blob/main/appuat.ipa</string>
+					<string>https://github.com/vergAvesta/TESAPP/blob/main/appuat.ipa?raw=true</string>
 				</dict>
 				<dict>
 					<key>kind</key>
